--- a/Backend_project/assets/templates/register.html
+++ b/Backend_project/assets/templates/register.html
@@ -1,16 +1,15 @@
 <div layout="row" layout-align="center center" style="margin-top: 10%;" class="fill-height">
     <md-content>
         <md-card>
-            <form name="loginForm" style="padding: 10px;" novalidate>
-                <h2>Log in:</h2>
+            <form name="registerForm" style="padding: 10px;" novalidate>
+                <h2>Register:</h2>
                 <div class="column">
                     <md-text-float label="Username" ng-model="username" required></md-text-float>
                     <md-text-float type="password" label="Password" ng-model="password" required></md-text-float>
-                    <md-button class="md-primary fill-width"  md-theme="cyan" aria-label="Login" ng-click="loginForm.$valid&&login(username,password)">
-                        Login
+                    <md-button class="md-primary fill-width"  md-theme="cyan" aria-label="Register" ng-click="registerForm.$valid&&register(username,password)">
+                        Register
                     </md-button>
                 </div>
-                <a href="#/register">Register user</a>
             </form>
         </md-card>
     </md-content>
