--- a/Backend_project/views/layout.ejs
+++ b/Backend_project/views/layout.ejs
@@ -3,9 +3,9 @@
 
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/bower_components/angular-material/angular-material.css">
-    <link rel="stylesheet" type="text/css"
-          href="/styles/material-design-iconic-font/css/material-design-iconic-font.css">
+    <link rel="stylesheet" type="text/css" href="/styles/material-design-iconic-font/css/material-design-iconic-font.css">
     <link rel="stylesheet" type="text/css" href="/bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic">
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
