--- a/Backend_project/assets/templates/login.html
+++ b/Backend_project/assets/templates/login.html
@@ -10,7 +10,7 @@
                         Login
                     </md-button>
                 </div>
-                <a href="#/register" style="text-align: center;font-size:12px;display: block;margin-top:6px;">Register user</a>
+                <a class="md-primary fill-width md-button md-default-theme" href="#/register" style="text-align: center;font-size:10px;display: block;margin-top:6px;">Register user</a>
             </form>
         </md-card>
     </md-content>
