--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
         <%//<link rel="stylesheet" type="text/css" href="/bower_components/angular-material/angular-material.css">%>
         <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.css">
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic">
+        <link rel="stylesheet" href="/styles/nga.min.css"/>
         <link rel="stylesheet" type="text/css" href="/styles/style.css">
         <title>Chat app</title>
     </head>
