--- a/assets/templates/room.html
+++ b/assets/templates/room.html
@@ -1,6 +1,6 @@
 <div layout>
-    <div id="users">
-        <md-button class="md-fab md-primary user" ng-repeat="u in users">
+    <div id="users"class="fadeIn">
+        <md-button class="md-fab md-primary user nga-default nga-slide-left" ng-repeat="u in users">
             {{u.username|limitTo:1}}
             <md-tooltip>
                 {{u.username}}
@@ -10,16 +10,16 @@
 
 
 
-     <md-whiteframe class="md-whiteframe-z1 content-card" >
+     <md-whiteframe class="md-whiteframe-z1 content-card fadeIn">
          <h1 style="text-align: center" ng-show="content&&content.title">{{content.title}}</h1>
 
         <div class="fill-width inner-content">
-            <youtube-video ng-if="content&&content.contentType=='ytb'" video-url="content.path" player-width="'100%'" player-height="'100%'"></youtube-video>
+            <youtube-video  ng-if="content&&content.contentType=='ytb'" video-url="content.path" player-width="'100%'" player-height="'100%'"></youtube-video>
             <img ng-if="content&&(content.contentType=='image/jpeg'||content.contentType=='image/png')" ng-src="{{content.path}}" style="max-width: 100%;max-height:100%;margin:0 auto;display:block;"/>
             <audio ng-if="content&&(content.contentType=='audio/mpeg'||content.contentType=='audio/mp3')" controls="controls" style="margin: 0 auto;padding-top: 30%;display: block;width: 100%;">
                 <source ng-src="{{content.path}}" type="{{content.contentType}}">
             </audio>
-            <h2 ng-hide="content" style="padding-top:30%;text-align: center;">Upload some content by pressing the button on the left/bottom</h2>
+            <h2 ng-hide="content.contentType" style="padding-top:30%;text-align: center;">Upload some content by pressing the button on the left/bottom</h2>
         </div>
          <div class="progress">
              <div class="progress-bar progress-bar-success" ng-style="{'width': 100*content.loves/(content.loves+content.hates)+'%'}">
@@ -28,7 +28,7 @@
              </div>
          </div>
 
-        <div ng-if="content">
+        <div>
             <div style="text-align:center; margin:30px 0;">
                 <img id="tinderyes" src="images/TinderYes.png" title="HOT" ng-click="tinderYes()" style="margin-right:90px;">
                 <img id="tinderno" src="images/TinderNo.png" title="NOT" ng-click="tinderNo()">
@@ -37,7 +37,7 @@
     </md-whiteframe>
 
 
-    <md-button class="md-fab md-primary" aria-label="Login" ng-click="showContentPicker()"
+    <md-button class="md-fab md-primary fadeIn" aria-label="Login" ng-click="showContentPicker()"
                style="position: fixed; left: 50px; bottom: 50px;">
         <i class="mdi-note-add mdi-2x"></i>
         <md-tooltip>
@@ -46,7 +46,7 @@
     </md-button>
 
 
-    <md-button class="md-fab md-primary" aria-label="Login" ng-click="showMessenger()"
+    <md-button class="md-fab md-primary fadeIn" aria-label="Login" ng-click="showMessenger()"
                style="position: fixed; right: 50px; bottom: 50px;">
         <i class="mdi-messenger mdi-2x"></i>
     </md-button>
@@ -56,14 +56,14 @@
         <md-card style="bottom:0px;background-color:#f5f5f5;" id="messenger">
             <div style=" height: 480px; overflow-y:scroll; width:300px;  right: 0;">
                 <ul style="padding:0px;">
-                    <li style="list-style-type: none; width:100%;" ng-repeat="m in messages">
+                    <li style="list-style-type: none; width:100%;" ng-repeat="m in messages" class="nga-default nga-slide-left">
                         <md-card style="display: inline-block;background:#fff;">
                             <div>{{m.username}}: {{m.message}}</div>
                         </md-card>
                         <div>{{date}}</div>
                     </li>
                 </ul>
-                <div style="position:absolute; bottom: 45px; font-size: 12px; margin-left: 5px; opacity: 0.9;">
+                <div style="position:absolute; bottom: 45px; font-size: 12px; margin-left: 5px;" ng-show="userIsTypingMessage" class="nga-default nga-fade">
                     {{userIsTypingMessage}}
                 </div>
             </div>
